# mini-data-catalog

./: .env.example  .gitignore  README.md  docker-compose.yml  docker-entrypoint.sh  dockerfile.application  dockerfile.celery  postman_collection.json  pyproject.toml
account/: models.py  serializer.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_otp_invalidate.py  0003_delete_user.py
account/services/: auth.py  user.py
api/: models.py  serializer.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_tablenames_etls_alter_tablenames_schema.py
api/service/: db_reader.py  file_parser.py  main.py
config/: __init__.py  celery.py  settings.py  urls.py
middlewares/: none_2xx_logger_middleware.py
utils/: utils.py
